--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "~4.13.4",
     "hashids": "^1.1.1",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^7.1.9",
     "mongoose": "^4.6.4",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0"
